# gobang

./: .dockerignore  .env.android.example  .env.example  .gitignore  Caddy.Dockerfile  Caddyfile  Dockerfile  README.md  capacitor.config.ts  compose.override.yaml  compose.yaml  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.playwright-mcp/: page-2026-07-10T17-50-10-888Z.yml  page-2026-07-10T17-52-10-026Z.yml  page-2026-07-10T17-52-36-909Z.yml  page-2026-07-10T17-52-41-068Z.yml  page-2026-07-10T17-52-56-483Z.yml  page-2026-07-10T17-53-04-373Z.yml  page-2026-07-10T17-54-09-723Z.yml  page-2026-07-10T17-54-27-231Z.yml  page-2026-07-10T17-54-53-753Z.yml  page-2026-07-10T17-55-55-913Z.yml  (+3 more)
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: app_links.py  auth.py  dependencies.py  games.py  invitations.py  leaderboard.py  legal.py  matchmaking.py  presence.py  push.py  reactions.py  schemas.py
backend/app/clients/: firebase.py  pocketbase.py
backend/app/domain/: __init__.py  game.py  invitation.py  matchmaking.py  push.py  reaction.py  rules.py
backend/app/repositories/: pocketbase_games.py  pocketbase_invitations.py  pocketbase_matchmaking.py  pocketbase_push.py  pocketbase_reactions.py
backend/app/services/: games.py  invitations.py  matchmaking.py  presence.py  push.py  reactions.py
backend/tests/: test_api.py  test_games.py  test_pocketbase_client.py  test_pocketbase_repository.py  test_presence.py  test_push.py  test_rules.py
src/: App.vue  (+1 more)
(+87 files in other folders)
