[project]
name = "gobang-backend"
version = "0.1.0"
description = "Authoritative API for realtime Gobang games"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.116.0,<0.117.0",
    "httpx>=0.28.0,<0.29.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
